# Computer-Graphics

./: .gitignore  02. 2D Line drawing.ppt  02.1. Animation principles.pptx  04. Camera Movement.pptx  07-Biendien3D_Mesh.PPT  13. OpenGL .pptx  14. OpenGL SL.pptx  CMakeLists.txt  README.md  VisualStudio_Setup.md  old. Bieu dien duong va mat trong 3D .PPT
assets/shaders/: bubble.frag  bubble.vert  ruin.frag  ruin.vert  seaweed.frag  seaweed.vert
include/: Camera.h  Common.h  Mesh.h  Render.h  SceneBuilder.h  SceneFactory.h  Shader.h  Texture.h  stb_image.h
libs/: README.md
src/: Camera.cpp  Mesh.cpp  Render.cpp  SceneBuilder.cpp  SceneFactory.cpp  Shader.cpp  Texture.cpp  main.cpp
